--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ permissions:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  REF_NAME: ${{ github.ref_name }}
 
 jobs:
   create:
@@ -17,13 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref_name }}
+          ref: "$REF_NAME"
           persist-credentials: false
       - name: verify version matches
         shell: bash
-        run: grep -q 'version = "${{ github.ref_name }}"' Cargo.toml || { echo version mismatch >&2 && exit 1; }
+        run: grep -q "version = $REF_NAME" Cargo.toml || { echo version mismatch >&2 && exit 1; }
       - name: create release
-        run: gh release create ${{ github.ref_name }} --draft --verify-tag --title ${{ github.ref_name }}
+        run: gh release create "$REF_NAME" --draft --verify-tag --title "$REF_NAME"
 
   build_bin:
     name: build binary
@@ -50,7 +51,7 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.ref_name }}
+        ref: "$REF_NAME"
         persist-credentials: false
 
     - name: install rust
@@ -77,7 +78,7 @@ jobs:
 
     - name: set archive name
       shell: bash
-      run: echo "ARCHIVE=jotdown-${{ github.ref_name }}-${{ matrix.target }}" >> $GITHUB_ENV
+      run: echo "ARCHIVE=jotdown-$REF_NAME-${{ matrix.target }}" >> $GITHUB_ENV
 
     - name: init archive dir
       shell: bash
@@ -103,7 +104,7 @@ jobs:
     - name: Upload release archive
       shell: bash
       run: |
-        gh release upload ${{ github.ref_name }} ${{ env.ASSET }}
+        gh release upload "$REF_NAME" ${{ env.ASSET }}
 
   build_wasm:
     name: build wasm lib
@@ -113,7 +114,7 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.ref_name }}
+        ref: "$REF_NAME"
         persist-credentials: false
 
     - name: install toolchain
@@ -131,5 +132,5 @@ jobs:
     - name: upload
       shell: bash
       run: |
-        gh release upload ${{ github.ref_name }} examples/jotdown_wasm/pkg/jotdown_wasm_bg.wasm
-        gh release upload ${{ github.ref_name }} examples/jotdown_wasm/pkg/jotdown_wasm.js
+        gh release upload "$REF_NAME" examples/jotdown_wasm/pkg/jotdown_wasm_bg.wasm
+        gh release upload "$REF_NAME" examples/jotdown_wasm/pkg/jotdown_wasm.js
