--- a/.github/workflows/zizmor.yml
+++ b/.github/workflows/zizmor.yml
@@ -8,6 +8,9 @@ jobs:
   zizmor:
     name: zizmor
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
     steps:
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4
